# LibRaw

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Changelog.rus  Changelog.txt  DEVELOPER-NOTES  INSTALL  INSTALL.CMAKE  LibRaw.pro  LibRaw.sln  Makefile  Makefile-preprocess.msvc  Makefile.am  Makefile.devel  Makefile.devel.nopp  Makefile.devel.noppr2i  Makefile.dist  Makefile.in  Makefile.mingw  Makefile.msvc  README  README.DNGSDK.txt  README.GoPro.txt  README.RawSpeed.txt  README.demosaic-packs  README.md  README.meson  SECURITY.md  TODO.txt  bootstrap.linux  bootstrap.macports  bootstrap.msvc.bat  clist2c.pl  clist2html.pl  configure  configure.ac  (+10 more)
Android/jni/: Android.mk  Application.mk  build.bat  build.sh
Android/jni/libraw/: Android.mk  swab.c  swab.h
RawSpeed/: rawspeed.qmake-pro-files.patch  rawspeed.win32-dll.patch  rawspeed_xmldata.cpp
buildfiles/: 4channels.pro  4channels.vcproj  4channels.vcxproj  4channels.vcxproj.filters  dcraw_emu.pro  dcraw_emu.vcproj  dcraw_emu.vcxproj  dcraw_emu.vcxproj.filters  dcraw_half.pro  dcraw_half.vcproj  dcraw_half.vcxproj  dcraw_half.vcxproj.filters  half_mt.pro  half_mt.vcproj  libraw-common-lib.pro  libraw-common.pro  libraw.pro  libraw.vcproj  libraw.vcxproj  libraw.vcxproj.filters  mem_image.pro  mem_image.vcproj  mem_image.vcxproj  mem_image.vcxproj.filters  multirender_test.pro  multirender_test.vcproj  multirender_test.vcxproj  multirender_test.vcxproj.filters  openbayer_sample.vcxproj  openbayer_sample.vcxproj.filters  postprocessing_benchmark.pro  postprocessing_benchmark.vcproj  postprocessing_benchmark.vcxproj  postprocessing_benchmark.vcxproj.filters  raw-identify.pro  raw-identify.vcproj  raw-identify.vcxproj  raw-identify.vcxproj.filters  rawtextdump.vcxproj  rawtextdump.vcxproj.filters  (+8 more)
cmake/data/: libraw.pc.cmake  libraw_config.h.cmake  libraw_r.pc.cmake
cmake/modules/: FindLibRaw.cmake  FindPatch.cmake
dcraw/: .gdbinit  dcraw.1.html  dcraw.c
doc/: API-C-eng.html  API-C-rus.html  API-C.html  API-CXX-eng.html  API-CXX-rus.html  API-CXX.html  API-datastruct-eng.html  API-datastruct-rus.html  API-datastruct.html  API-notes-eng.html  API-notes-rus.html  API-notes.html  API-overview-eng.html  API-overview-rus.html  Install-LibRaw-eng.html  Install-LibRaw-rus.html  Install-LibRaw.html  Samples-LibRaw-eng.html  Samples-LibRaw-rus.html  Samples-LibRaw.html  Why-LibRaw-eng.html  Why-LibRaw-rus.html  Why-LibRaw.html  corner-scheme.psd  index-eng.html  index-rus.html  index.html
internal/: aahd_demosaic.cpp  dcb_demosaicing.c  dcraw_common.cpp  dcraw_defs.h  dcraw_fileio.cpp  dcraw_fileio_defs.h  defines.h  demosaic_packs.cpp  dht_demosaic.cpp  dmp_include.h  libraw_cameraids.h  libraw_const.h  libraw_cxx_defs.h  libraw_internal_funcs.h  libraw_x3f.cpp  losslessjpeg.h  preprocess.pl  var_defines.h  wf_filtering.cpp  x3f_tools.h
libraw/: libraw.h  libraw_alloc.h  libraw_const.h  libraw_datastream.h  libraw_internal.h  libraw_types.h  libraw_version.h  libraw_version.h.cmake  librawwindows.h
m4/: ax_openmp.m4
samples/: 4channels.cpp  dcraw_emu.cpp  dcraw_half.c  half_mt.c  half_mt_win32.c  lens-identify.cpp  mem_image.cpp  mem_image_sample.cpp  multirender_test.cpp  openbayer_sample.cpp  postprocessing_benchmark.cpp  raw-identify.cpp  rawtextdump.cpp  simple_dcraw.cpp  unprocessed_raw.cpp
src/: libraw_c_api.cpp  libraw_cxx.cpp  libraw_datastream.cpp  libraw_fuji_compressed.cpp  libraw_xtrans_compressed.cpp  rawspeed_xmldata.cpp
src/decoders/: canon_600.cpp  crx.cpp  decoders_dcraw.cpp  decoders_libraw.cpp  decoders_libraw_dcrdefs.cpp  dng.cpp  fp_dng.cpp  fuji_compressed.cpp  generic.cpp  kodak_decoders.cpp  load_mfbacks.cpp  nikon_he_decoder.cpp  olympus14.cpp  pana8.cpp  smal.cpp  sony_arw6.cpp  sonycc.cpp  unpack.cpp  unpack_thumb.cpp
src/decoders/nikon_he/: nikon_he_bayer.cpp  nikon_he_bayer.h  nikon_he_bit_reader.cpp  nikon_he_bit_reader.h  nikon_he_coefficient_decode.cpp  nikon_he_coefficient_decode.h  nikon_he_decode.cpp  nikon_he_decode.h  nikon_he_dequantize.cpp  nikon_he_dequantize.h  nikon_he_gcli_decode.cpp  nikon_he_gcli_decode.h  nikon_he_gtli_table.cpp  nikon_he_gtli_table.h  nikon_he_idwt_horizontal.cpp  nikon_he_idwt_horizontal.h  nikon_he_idwt_vertical.cpp  nikon_he_idwt_vertical.h  nikon_he_iqx_iqp_lut_data.h  nikon_he_precinct_decode.cpp  nikon_he_precinct_decode.h  nikon_he_precinct_header.cpp  nikon_he_precinct_header.h  nikon_he_predecessor.cpp  nikon_he_predecessor.h  nikon_he_predict_lut.cpp  nikon_he_predict_lut.h  nikon_he_subband_config.cpp  nikon_he_subband_config.h  nikon_he_tile.cpp  nikon_he_tile.h
src/decompressors/: losslessjpeg.cpp
src/demosaic/: aahd_demosaic.cpp  ahd_demosaic.cpp  dcb_demosaic.cpp  dht_demosaic.cpp  misc_demosaic.cpp  xtrans_demosaic.cpp
src/integration/: dngsdk_glue.cpp  rawspeed_glue.cpp
src/metadata/: adobepano.cpp  canon.cpp  ciff.cpp  cr3_parser.cpp  epson.cpp  exif_gps.cpp  fuji.cpp  hasselblad_model.cpp  identify.cpp  identify_tools.cpp  kodak.cpp  leica.cpp  makernotes.cpp  mediumformat.cpp  minolta.cpp  misc_parsers.cpp  nikon.cpp  normalize_model.cpp  olympus.cpp  p1.cpp  pentax.cpp  samsung.cpp  sony.cpp  tiff.cpp
src/postprocessing/: aspect_ratio.cpp  dcraw_process.cpp  mem_image.cpp  postprocessing_aux.cpp  postprocessing_ph.cpp  postprocessing_utils.cpp  postprocessing_utils_dcrdefs.cpp
src/preprocessing/: ext_preprocess.cpp  preprocessing_ph.cpp  raw2image.cpp  subtract_black.cpp
src/tables/: cameralist.cpp  colorconst.cpp  colordata.cpp  wblists.cpp
src/utils/: curves.cpp  decoder_info.cpp  init_close_utils.cpp  open.cpp  phaseone_processing.cpp  read_utils.cpp  thumb_utils.cpp  utils_dcraw.cpp  utils_libraw.cpp
src/write/: apply_profile.cpp  file_write.cpp  tiff_writer.cpp  write_ph.cpp
src/x3f/: x3f_parse_process.cpp  x3f_utils_patched.cpp
